@@ -1,6 +1,8 @@
 2015-03-25  Daniel Standage  <daniel.standage@gmail.com>
 
-   * scripts/normalize-by-median.py: Added an option to send output to stdout.
+   * scripts/normalize-by-median.py: Added support to the diginorm script for
+   sending output to terminal (stdout) when using the conventional - as the output
+   filename.
 
 2015-03-23  Kevin Murray  <spam@kdmurray.id.au>
 
